--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -13,7 +13,7 @@
 <ion-content padding>
   <ion-list>
     <!-- *ngFor: Diretiva para repetir, items foi definido em categorias.ts  --> 
-    <button ion-item *ngFor="let item of items">
+    <button ion-item *ngFor="let item of items" (click)="showProdutos(item.id)">
 
       <ion-thumbnail item-start>
         <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
