--- a/src/pages/carrinho/carrinho.html
+++ b/src/pages/carrinho/carrinho.html
@@ -40,5 +40,6 @@
     </ion-item>
   </ion-list>
 
-  <button ion-button block (click)="continue()">Continuar Comprando</button>
+  <button ion-button block outline (click)="continue()">Continuar Comprando</button>
+  <button *ngIf="total()>0" ion-button  block (click)="checkout()" color="secundary">Finalizar Pedido</button>
 </ion-content>
