--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -1,25 +1,30 @@
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>ProdutoDetail</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>ProdutoDetail</ion-title>
+    </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <ion-card>
-    <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'" />
-    <ion-card-content>
-        <ion-card-title>
-            {{item?.nomeProduto}}
-            <!-- Uso o ? -> Não mostrar erro enquanto não carrega o dado -->
-        </ion-card-title>
-        <p>
-            {{item?.preco | currency}}
-        </p>
-    </ion-card-content>
-</ion-card>
+    <ion-fab top right edge>
+        <button navPush="CarrinhoPage" ion-fab color="primary">
+            <ion-icon name="cart"></ion-icon>
+        </button>
+    </ion-fab>
+    <ion-card>
+        <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'" />
+        <ion-card-content>
+            <ion-card-title>
+                {{item?.nomeProduto}}
+                <!-- Uso o ? -> Não mostrar erro enquanto não carrega o dado -->
+            </ion-card-title>
+            <p>
+                {{item?.preco | currency}}
+            </p>
+        </ion-card-content>
+    </ion-card>
 
-<button ion-button block outline (click)="addCarrinho(item)">Adicionar ao Carrinho</button>
+    <button ion-button block outline (click)="addCarrinho(item)">Adicionar ao Carrinho</button>
 </ion-content>
