--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -21,7 +21,7 @@
     <button ion-item *ngFor="let item of items" (click)="showProdutos(item.id)">
 
       <ion-thumbnail item-start>
-        <img src="{{bucketUrl}}/cat{{item.id}}.jpg">
+        <img class="circle" src="{{bucketUrl}}/cat{{item.id}}.jpg">
       </ion-thumbnail>
       <!-- {{}} : Interpolação > HTML com o dado de categorias.ts (item) -->
       <h2>{{item.nomeCategoria}}</h2>
