--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -8,6 +8,15 @@
 
 
 <ion-content padding>
+
+  
+
+        <ion-refresher (ionRefresh)="doRefresh($event)">
+          <ion-refresher-content></ion-refresher-content>
+        </ion-refresher>
+      
+     
+  
     <ion-fab top right edge>
         <button navPush="CarrinhoPage" ion-fab color="primary"><ion-icon name="cart"></ion-icon></button>
       </ion-fab>
