--- a/src/pages/estoque/estoque.html
+++ b/src/pages/estoque/estoque.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-    <ion-navbar style="background-color:blue;">
+    <ion-navbar color="dark">
      <button ion-button menuToggle>
         <ion-icon name="menu"></ion-icon>
      </button>
