--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,7 +1,7 @@
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>signup</ion-title>
+  <ion-navbar color="dark">
+    <ion-title>Cadastro</ion-title>
   </ion-navbar>
 
 </ion-header>
