--- a/src/pages/carrinho/carrinho.html
+++ b/src/pages/carrinho/carrinho.html
@@ -1,10 +1,10 @@
 <ion-header>
 
-  <ion-navbar>
+    <ion-navbar color="dark">
     <button ion-button menuToggle>
        <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Cart</ion-title>
+    <ion-title>Carrinho de Compras</ion-title>
    </ion-navbar>
 
 </ion-header>
