--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="dark">
       <button ion-button menuToggle>
           <ion-icon name="menu"></ion-icon>
        </button>
@@ -27,7 +27,7 @@
     </ion-item>
     <ion-item>
       <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button>
-      <button ion-button block (click)="getGalleryPicture()" [disabled]="cameraOn">Galeria</button>
+      <button ion-button block (click)="getGaleriaPicture()" [disabled]="cameraOn">Galeria</button>
       <button *ngIf="picture" ion-button outline block (click)="enviaFoto()">Enviar imagem</button>
       <button *ngIf="picture" ion-button outline block (click)="cancel()">Descartar imagem</button>
     </ion-item>
